fix the rest of the tests
git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk/grouper@6057 bc24b658-cf39-4249-b827-e3526eaaeb42